split rules and definition recommit

--- a/model_definition.ipynb
+++ b/model_definition.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "41748648",
+   "id": "652e3585",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0c103a9",
+   "id": "6e5292f4",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "588beb83",
+   "id": "c54f16a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "446dfca0",
+   "id": "002bc7ed",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ed467fed",
+   "id": "80ada526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,16 +526,13 @@
     "    return model_initialisation\n",
     "\n",
     "def define_model(model_initialisation, model_rules):\n",
-    "    model_initialisation = get_model_initialisation(model_initialisation_dict)\n",
-    "    model = model_initialisation+'\\n'+rules_header+'\\n'+model_rules\n",
-    "    return model\n",
-    "\n"
+    "    return model_initialisation+'\\n'+rules_header+'\\n'+model_rules\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "09e3ae4e",
+   "id": "a2995f47",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "df1af8f5",
+   "id": "adb0efcc",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad566d2e",
+   "id": "a342846f",
    "metadata": {},
    "outputs": [],
    "source": [
