commit modifications to old files

--- a/JL_Mtb_model.ipynb
+++ b/JL_Mtb_model.ipynb
@@ -3,11 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Packages used within the code\n",
     "\n",
@@ -19,11 +16,8 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# This first part is setting up the model\n",
     "model_definition = \"\"\"\n",
@@ -300,9 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -521,7 +513,6 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -594,9 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -650,7 +639,6 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -715,9 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -770,9 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -832,9 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -885,9 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -944,9 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -999,9 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1054,9 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1106,7 +1080,6 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1163,50 +1136,30 @@
   {
    "cell_type": "code",
    "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
-   ]
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
-   ]
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
-   ]
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2 (system-wide)",
+   "display_name": "rp1",
    "language": "python",
-   "metadata": {
-    "cocalc": {
-     "description": "Python 2 programming language",
-     "priority": 5,
-     "url": "https://www.python.org/"
-    }
-   },
-   "name": "python2",
-   "resource_dir": "/ext/jupyter/kernels/python2"
+   "name": "rp1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1218,7 +1171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.18"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
