build or network

--- a/string_model_builder.ipynb
+++ b/string_model_builder.ipynb
@@ -277,7 +277,7 @@
     "    rules = []\n",
     "    for key, value in node_inputs.items():\n",
     "        rule = key + ' *= '\n",
-    "        rule = rule + ' and '.join(value)\n",
+    "        rule = rule + ' or '.join(value)\n",
     "        rules.append(rule)\n",
     "        \n",
     "    # construct initial conditions\n",
