--- a/boolean_model_helper.ipynb
+++ b/boolean_model_helper.ipynb
@@ -59,7 +59,8 @@
     "\n",
     "def plot_nodes(model, nodes, w=10, h=32): # plot node states \n",
     "    data = []\n",
-    "    labels = sorted(nodes) # nodes sorted alphabetically\n",
+    "#     labels = sorted(nodes) # nodes sorted alphabetically\n",
+    "    labels = nodes \n",
     "    for label in labels:\n",
     "        data.append(model.data[label])\n",
     "        \n",
