--- a/string_model_builder.ipynb
+++ b/string_model_builder.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
    "source": [
     "# write export helper functions\n",
     "\n",
-    "def string2definition(tabular_text_output, initial_node_value, out='model.txt'):\n",
+    "def string2definition1(tabular_text_output, initial_node_value, out='model.txt'):\n",
     "    df = pd.read_csv(tabular_text_output)\n",
     "    \n",
     "    # get list of nodes\n",
@@ -373,7 +373,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ESCRT_complexes', 'MHC_I_complexes', 'vATPase_complexes'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read in complexes and create a dict\n",
+    "# build dict of node inputs\n",
+    "\n",
+    "df_complexes = pd.read_csv('string-1-complexes.csv')\n",
+    "complexes = df_complexes.complex.unique()\n",
+    "complexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ESCRT_complexes': ['HGS',\n",
+       "  'CHMP2A',\n",
+       "  'CHMP4B',\n",
+       "  'CHMP2B',\n",
+       "  'CHMP3',\n",
+       "  'STAM',\n",
+       "  'TSG101'],\n",
+       " 'MHC_I_complexes': ['B2M',\n",
+       "  'HLA-C',\n",
+       "  'HLA-B',\n",
+       "  'HLA-G',\n",
+       "  'HLA-E',\n",
+       "  'CD8A',\n",
+       "  'CALR',\n",
+       "  'HLA-A'],\n",
+       " 'vATPase_complexes': ['ATP6V1F',\n",
+       "  'ATP6V1B2',\n",
+       "  'ATP6V1A',\n",
+       "  'ATP6V1G1',\n",
+       "  'ATP6V1D',\n",
+       "  'ATP6V1E1',\n",
+       "  'ATP6V1H']}"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complex_inputs = {}\n",
+    "for complex in complexes:\n",
+    "    inputs = list(df_complexes[df_complexes.complex == complex].node)\n",
+    "    complex_inputs[complex] = inputs\n",
+    "complex_inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AP1B1': ['CLVS2', 'HIP1R'],\n",
+       " 'ASPSCR1': ['VCP', 'UBXN7', 'UFD1L', 'NSFL1C'],\n",
+       " 'CD1B': ['CD1D', 'MHC_I_complexes'],\n",
+       " 'CD1D': ['MHC_I_complexes', 'CD1B'],\n",
+       " 'CLVS2': ['AP1B1'],\n",
+       " 'DERL1': ['VCP', 'MHC_I_complexes'],\n",
+       " 'GGA1': ['RAB5A'],\n",
+       " 'HIP1R': ['AP1B1', 'ESCRT_complexes'],\n",
+       " 'KLRC1': ['MHC_I_complexes', 'KLRD1'],\n",
+       " 'KLRD1': ['KLRC1', 'MHC_I_complexes'],\n",
+       " 'KPNA1': ['RAN', 'KPNB1'],\n",
+       " 'KPNA2': ['NUTF2', 'RAN', 'KPNB1', 'MHC_I_complexes'],\n",
+       " 'KPNB1': ['NUTF2', 'RAN', 'KPNA2', 'KPNA1'],\n",
+       " 'NSFL1C': ['VCP', 'ASPSCR1', 'UBXN7', 'UFD1L'],\n",
+       " 'NUTF2': ['RAN', 'KPNB1', 'KPNA2'],\n",
+       " 'RAB5A': ['GGA1', 'RAB7A'],\n",
+       " 'RAB7A': ['ESCRT_complexes', 'RAB5A'],\n",
+       " 'RAN': ['NUTF2', 'XPO1', 'XPO5', 'KPNB1', 'KPNA2', 'KPNA1'],\n",
+       " 'UBXN7': ['VCP', 'ASPSCR1', 'vATPase_complexes', 'UFD1L', 'NSFL1C'],\n",
+       " 'UFD1L': ['VCP', 'VPS33B', 'ASPSCR1', 'UBXN7', 'NSFL1C'],\n",
+       " 'VCP': ['ASPSCR1', 'MHC_I_complexes', 'DERL1', 'NSFL1C', 'UBXN7', 'UFD1L'],\n",
+       " 'VPS33B': ['UFD1L'],\n",
+       " 'XPO1': ['RAN', 'ESCRT_complexes'],\n",
+       " 'XPO5': ['RAN']}"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_inputs\n",
+    "\n",
+    "# remove nodes in a complex\n",
+    "for components in complex_inputs.values():\n",
+    "    for node in node_inputs.keys():\n",
+    "        if node in components:\n",
+    "            del node_inputs[node]\n",
+    "            continue\n",
+    "\n",
+    "# replace complex nodes\n",
+    "for node, inputs in node_inputs.items():\n",
+    "    for complex, components in complex_inputs.items():\n",
+    "        for i, input in enumerate(inputs):\n",
+    "            if input in components:\n",
+    "                node_inputs[node][i] = complex\n",
+    "                continue\n",
+    "    node_inputs[node] = list(set(node_inputs[node]))\n",
+    "\n",
+    "node_inputs # get OR'd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ESCRT_complexes': ['HGS',\n",
+       "  'CHMP2A',\n",
+       "  'CHMP4B',\n",
+       "  'CHMP2B',\n",
+       "  'CHMP3',\n",
+       "  'STAM',\n",
+       "  'TSG101'],\n",
+       " 'MHC_I_complexes': ['B2M',\n",
+       "  'HLA-C',\n",
+       "  'HLA-B',\n",
+       "  'HLA-G',\n",
+       "  'HLA-E',\n",
+       "  'CD8A',\n",
+       "  'CALR',\n",
+       "  'HLA-A'],\n",
+       " 'vATPase_complexes': ['ATP6V1F',\n",
+       "  'ATP6V1B2',\n",
+       "  'ATP6V1A',\n",
+       "  'ATP6V1G1',\n",
+       "  'ATP6V1D',\n",
+       "  'ATP6V1E1',\n",
+       "  'ATP6V1H']}"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complex_inputs # get AND'd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write export helper functions\n",
+    "\n",
+    "def string2definition2(tabular_text_output, complexes, initial_value):\n",
+    "    df = pd.read_csv(tabular_text_output)\n",
+    "    df_complexes = pd.read_csv('string-1-complexes.csv')\n",
+    "\n",
+    "    # get list of nodes \n",
+    "    nodes = list(df.node1.unique())\n",
+    "    \n",
+    "    # build dict of node inputs\n",
+    "    node_inputs = {}\n",
+    "    for node in nodes:\n",
+    "        inputs = list(df[df.node1 == node].node2)\n",
+    "        node_inputs[node] = inputs\n",
+    "        \n",
+    "    # get list of complexes \n",
+    "    complexes = list(df_complexes.complex.unique())\n",
+    "\n",
+    "    # build dict of complexes\n",
+    "    complex_inputs = {}\n",
+    "    for complex in complexes:\n",
+    "        inputs = list(df_complexes[df_complexes.complex == complex].node)\n",
+    "        complex_inputs[complex] = inputs\n",
+    "\n",
+    "    # remove nodes in a complex\n",
+    "    for components in complex_inputs.values():\n",
+    "        for node in node_inputs.keys():\n",
+    "            if node in components:\n",
+    "                del node_inputs[node]\n",
+    "                continue\n",
+    "\n",
+    "    # replace complex nodes\n",
+    "    for node, inputs in node_inputs.items():\n",
+    "        for complex, components in complex_inputs.items():\n",
+    "            for i, input in enumerate(inputs):\n",
+    "                if input in components:\n",
+    "                    node_inputs[node][i] = complex\n",
+    "                    continue\n",
+    "        node_inputs[node] = list(set(node_inputs[node]))   \n",
+    "    \n",
+    "    # OR the nodes\n",
+    "    rules = []\n",
+    "    for key, value in node_inputs.items():\n",
+    "        rule = key + ' *= '\n",
+    "        rule = rule + ' or '.join(value)\n",
+    "        rules.append(rule)\n",
+    "        \n",
+    "    # AND the complexes\n",
+    "    for key, value in complex_inputs.items():\n",
+    "        rule = key + ' *= '\n",
+    "        rule = rule + ' and '.join(value)\n",
+    "        rules.append(rule)\n",
+    "        \n",
+    "    # initial conditions\n",
+    "    initial_value = 'True' if initial_value else 'False'\n",
+    "    initial_conditions = []\n",
+    "    for node in (nodes+complexes):\n",
+    "        initial_condition = node + ' = ' + initial_value\n",
+    "        initial_conditions.append(initial_condition)\n",
+    "        \n",
+    "    # definition\n",
+    "    definition = '#initial conditions\\n'+'\\n'.join(initial_conditions)+'\\n\\n#rules\\n'+'\\n'.join(rules)\n",
+    "    \n",
+    "    return definition\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -381,134 +627,89 @@
      "output_type": "stream",
      "text": [
       "#initial conditions\n",
-      "AP1B1 = Random\n",
-      "ASPSCR1 = Random\n",
-      "ATP6V1A = Random\n",
-      "ATP6V1B2 = Random\n",
-      "ATP6V1D = Random\n",
-      "ATP6V1E1 = Random\n",
-      "ATP6V1F = Random\n",
-      "ATP6V1G1 = Random\n",
-      "ATP6V1H = Random\n",
-      "B2M = Random\n",
-      "CALR = Random\n",
-      "CD1B = Random\n",
-      "CD1D = Random\n",
-      "CD8A = Random\n",
-      "CHMP2A = Random\n",
-      "CHMP2B = Random\n",
-      "CHMP3 = Random\n",
-      "CHMP4B = Random\n",
-      "CLVS2 = Random\n",
-      "DERL1 = Random\n",
-      "GGA1 = Random\n",
-      "HGS = Random\n",
-      "HIP1R = Random\n",
-      "HLA-A = Random\n",
-      "HLA-B = Random\n",
-      "HLA-C = Random\n",
-      "HLA-E = Random\n",
-      "HLA-G = Random\n",
-      "KLRC1 = Random\n",
-      "KLRD1 = Random\n",
-      "KPNA1 = Random\n",
-      "KPNA2 = Random\n",
-      "KPNB1 = Random\n",
-      "NSFL1C = Random\n",
-      "NUTF2 = Random\n",
-      "RAB5A = Random\n",
-      "RAB7A = Random\n",
-      "RAN = Random\n",
-      "STAM = Random\n",
-      "TSG101 = Random\n",
-      "UBXN7 = Random\n",
-      "UFD1L = Random\n",
-      "VCP = Random\n",
-      "VPS33B = Random\n",
-      "XPO1 = Random\n",
-      "XPO5 = Random\n",
+      "AP1B1 = True\n",
+      "ASPSCR1 = True\n",
+      "ATP6V1A = True\n",
+      "ATP6V1B2 = True\n",
+      "ATP6V1D = True\n",
+      "ATP6V1E1 = True\n",
+      "ATP6V1F = True\n",
+      "ATP6V1G1 = True\n",
+      "ATP6V1H = True\n",
+      "B2M = True\n",
+      "CALR = True\n",
+      "CD1B = True\n",
+      "CD1D = True\n",
+      "CD8A = True\n",
+      "CHMP2A = True\n",
+      "CHMP2B = True\n",
+      "CHMP3 = True\n",
+      "CHMP4B = True\n",
+      "CLVS2 = True\n",
+      "DERL1 = True\n",
+      "GGA1 = True\n",
+      "HGS = True\n",
+      "HIP1R = True\n",
+      "HLA-A = True\n",
+      "HLA-B = True\n",
+      "HLA-C = True\n",
+      "HLA-E = True\n",
+      "HLA-G = True\n",
+      "KLRC1 = True\n",
+      "KLRD1 = True\n",
+      "KPNA1 = True\n",
+      "KPNA2 = True\n",
+      "KPNB1 = True\n",
+      "NSFL1C = True\n",
+      "NUTF2 = True\n",
+      "RAB5A = True\n",
+      "RAB7A = True\n",
+      "RAN = True\n",
+      "STAM = True\n",
+      "TSG101 = True\n",
+      "UBXN7 = True\n",
+      "UFD1L = True\n",
+      "VCP = True\n",
+      "VPS33B = True\n",
+      "XPO1 = True\n",
+      "XPO5 = True\n",
+      "ESCRT_complexes = True\n",
+      "MHC_I_complexes = True\n",
+      "vATPase_complexes = True\n",
       "\n",
       "#rules\n",
-      "NUTF2 *= KPNA2 and KPNB1 and RAN\n",
-      "ATP6V1D *= ATP6V1G1 and ATP6V1B2 and ATP6V1E1 and ATP6V1H and ATP6V1F and ATP6V1A\n",
-      "CD1D *= CD1B and B2M\n",
-      "ATP6V1F *= ATP6V1D and ATP6V1E1 and ATP6V1A and ATP6V1B2 and UBXN7 and ATP6V1H and ATP6V1G1\n",
-      "ATP6V1A *= ATP6V1D and ATP6V1E1 and ATP6V1G1 and ATP6V1F and ATP6V1H and ATP6V1B2\n",
-      "KLRD1 *= HLA-E and HLA-A and B2M and KLRC1\n",
-      "HLA-C *= CALR and KPNA2 and CD8A and HLA-G and HLA-A and HLA-B and HLA-E and B2M\n",
-      "HLA-B *= CALR and HLA-C and HLA-E and HLA-A and CD8A and HLA-G and B2M\n",
-      "CHMP4B *= STAM and HGS and TSG101 and CHMP2B and CHMP3 and CHMP2A\n",
-      "TSG101 *= CHMP4B and RAB7A and XPO1 and HIP1R and CHMP2B and CHMP2A and STAM and CHMP3 and HGS\n",
-      "HLA-G *= CALR and HLA-C and HLA-E and HLA-A and CD8A and HLA-B and KLRC1 and B2M\n",
-      "ATP6V1H *= ATP6V1D and ATP6V1E1 and ATP6V1A and ATP6V1B2 and ATP6V1G1 and ATP6V1F\n",
-      "HLA-E *= CALR and HLA-C and CD8A and HLA-A and HLA-G and HLA-B and KLRD1 and KLRC1 and B2M\n",
-      "CHMP2B *= CHMP4B and TSG101 and STAM and HGS and CHMP3 and CHMP2A\n",
-      "B2M *= CALR and CD1B and CD1D and HLA-C and HLA-E and KLRD1 and HLA-A and CD8A and HLA-B and HLA-G and KLRC1 and KPNA2\n",
-      "CHMP2A *= CHMP4B and TSG101 and CHMP2B and HGS and STAM and CHMP3\n",
-      "CHMP3 *= CHMP4B and TSG101 and CHMP2B and HGS and STAM and CHMP2A\n",
-      "CD1B *= CD1D and B2M\n",
-      "STAM *= CHMP4B and TSG101 and CHMP2B and HGS and CHMP3 and CHMP2A\n",
-      "HIP1R *= TSG101 and AP1B1\n",
-      "XPO1 *= TSG101 and RAN\n",
+      "NUTF2 *= RAN or KPNB1 or KPNA2\n",
+      "CD1D *= MHC_I_complexes or CD1B\n",
+      "KLRD1 *= KLRC1 or MHC_I_complexes\n",
+      "CD1B *= CD1D or MHC_I_complexes\n",
+      "HIP1R *= AP1B1 or ESCRT_complexes\n",
+      "XPO1 *= RAN or ESCRT_complexes\n",
       "XPO5 *= RAN\n",
       "VPS33B *= UFD1L\n",
-      "RAN *= NUTF2 and XPO5 and KPNB1 and KPNA1 and XPO1 and KPNA2\n",
-      "DERL1 *= HLA-A and VCP\n",
-      "NSFL1C *= UFD1L and UBXN7 and ASPSCR1 and VCP\n",
-      "AP1B1 *= HIP1R and CLVS2\n",
-      "UBXN7 *= UFD1L and ATP6V1B2 and ASPSCR1 and NSFL1C and ATP6V1F and VCP\n",
-      "HLA-A *= DERL1 and CALR and HLA-C and HLA-E and KLRD1 and HLA-G and HLA-B and KLRC1 and CD8A and B2M\n",
-      "KLRC1 *= HLA-E and KLRD1 and HLA-A and HLA-G and B2M\n",
-      "RAB7A *= TSG101 and RAB5A\n",
-      "RAB5A *= RAB7A and GGA1\n",
-      "KPNA1 *= KPNB1 and RAN\n",
-      "KPNB1 *= NUTF2 and KPNA1 and RAN and KPNA2\n",
-      "HGS *= CHMP4B and TSG101 and CHMP2B and CHMP2A and CHMP3 and STAM\n",
+      "RAN *= NUTF2 or XPO1 or XPO5 or KPNB1 or KPNA2 or KPNA1\n",
+      "DERL1 *= VCP or MHC_I_complexes\n",
+      "NSFL1C *= VCP or ASPSCR1 or UBXN7 or UFD1L\n",
+      "AP1B1 *= CLVS2 or HIP1R\n",
+      "UBXN7 *= VCP or ASPSCR1 or vATPase_complexes or UFD1L or NSFL1C\n",
+      "KLRC1 *= MHC_I_complexes or KLRD1\n",
+      "RAB7A *= ESCRT_complexes or RAB5A\n",
+      "RAB5A *= GGA1 or RAB7A\n",
+      "KPNA1 *= RAN or KPNB1\n",
+      "KPNB1 *= NUTF2 or RAN or KPNA2 or KPNA1\n",
       "GGA1 *= RAB5A\n",
-      "CD8A *= CALR and HLA-C and HLA-E and HLA-A and HLA-B and HLA-G and B2M\n",
-      "ATP6V1B2 *= ATP6V1D and ATP6V1E1 and ATP6V1A and UBXN7 and ATP6V1H and ATP6V1F and ATP6V1G1\n",
-      "VCP *= DERL1 and UFD1L and UBXN7 and ASPSCR1 and CALR and NSFL1C\n",
-      "ASPSCR1 *= UFD1L and UBXN7 and NSFL1C and VCP\n",
-      "CALR *= VCP and HLA-G and HLA-C and CD8A and HLA-E and HLA-B and HLA-A and B2M\n",
-      "ATP6V1E1 *= ATP6V1D and ATP6V1H and ATP6V1A and ATP6V1F and ATP6V1G1 and ATP6V1B2\n",
-      "KPNA2 *= NUTF2 and KPNB1 and HLA-C and B2M and RAN\n",
-      "ATP6V1G1 *= ATP6V1D and ATP6V1E1 and ATP6V1A and ATP6V1B2 and ATP6V1H and ATP6V1F\n",
-      "UFD1L *= ASPSCR1 and NSFL1C and VPS33B and UBXN7 and VCP\n",
+      "VCP *= ASPSCR1 or MHC_I_complexes or DERL1 or NSFL1C or UBXN7 or UFD1L\n",
+      "ASPSCR1 *= VCP or UBXN7 or UFD1L or NSFL1C\n",
+      "KPNA2 *= NUTF2 or RAN or KPNB1 or MHC_I_complexes\n",
+      "UFD1L *= VCP or VPS33B or ASPSCR1 or UBXN7 or NSFL1C\n",
       "CLVS2 *= AP1B1\n",
-      "\n",
-      "#mtb node initial conditions\n",
-      "Eis = True\n",
-      "esxA = True\n",
-      "esxH:esxG = True\n",
-      "IpdC = True\n",
-      "ndkA = True\n",
-      "PPE2 = True\n",
-      "PstS1 = True\n",
-      "PtpA = True\n",
-      "Rv2779c = True\n",
-      "SapM = True\n",
-      "\n",
-      "#mtb update rules\n",
-      "MRC1 *= MRC1 and not (PstS1)\n",
-      "RAB7A *= RAB7A and not (ndkA or SapM)\n",
-      "TRIM27 *= TRIM27 and not (PtpA)\n",
-      "RAB5A *= RAB5A and not (ndkA)\n",
-      "KPNB1 *= KPNB1 and not (PPE2)\n",
-      "GSK3A *= GSK3A and not (PtpA)\n",
-      "HGS *= HGS and not (esxH:esxG)\n",
-      "ATP6V1H *= ATP6V1H and not (PtpA)\n",
-      "TLR2 *= TLR2 and not (esxA or Rv2779c)\n",
-      "VPS33B *= VPS33B and not (PtpA)\n",
-      "B2M *= B2M and not (esxA)\n",
-      "CORO1A *= CORO1A and not (IpdC)\n",
-      "KPNA1 *= KPNA1 and not (PPE2)\n",
-      "DUSP16 *= DUSP16 and not (Eis)\n",
-      "NOS2 *= NOS2 and not (PPE2)\n"
+      "vATPase_complexes *= ATP6V1F and ATP6V1B2 and ATP6V1A and ATP6V1G1 and ATP6V1D and ATP6V1E1 and ATP6V1H\n",
+      "ESCRT_complexes *= HGS and CHMP2A and CHMP4B and CHMP2B and CHMP3 and STAM and TSG101\n",
+      "MHC_I_complexes *= B2M and HLA-C and HLA-B and HLA-G and HLA-E and CD8A and CALR and HLA-A\n"
      ]
     }
    ],
    "source": [
-    "# print add_mtb_edgelist(definition, 'mtb-edgelist.csv', 'True')\n"
+    "print string2definition2('string-network-1.csv', 'string-1-complexes.csv', True)"
    ]
   },
   {
